--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@ layout: default
             <h2 class="mdl-card__title-text">{{ planets.name }}</h2>
           </div>
           <div class="mdl-card__supporting-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Mauris sagittis pellentesque lacus eleifend lacinia...
+            <img src="{{ planets.img }}" />
           </div>
           <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{{ planets.url }}.html">
               Get Started
             </a>
           </div>
