--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ layout: default
     <div class="page-content">
       <div class="mdl-grid">
         {% for planets in site.data.planets %}
-        <div class="mdl-card mdl-shadow--2dp">
+        <div class="mdl-cell mdl-cell--6-col mdl-cell--12-col-tablet">
+        <div class="mdl-card mdl-shadow--2dp" style="width: 100%">
           <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">{{ planets.name }}</h2>
           </div>
@@ -46,6 +47,7 @@ layout: default
               <i class="material-icons">share</i>
             </button>
           </div>
+        </div>
         </div>
         {% endfor %}
       </div>
