--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
             <h2 class="mdl-card__title-text">{{ planets.name }}</h2>
           </div>
           <div class="mdl-card__supporting-text">
-            <img src="{{ planets.img }}" />
+            <img src="{{ planets.img }}" style="width: 100%" />
           </div>
           <div class="mdl-card__actions mdl-card--border">
             <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{{ planets.url }}.html">
