--- a/learning-html.html
+++ b/learning-html.html
@@ -23,3 +23,12 @@
   </body>
 </html>
 
+
+   <!DOCTYPE html>
+     <html>
+       <body>
+    
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+    
+  </body>
+</html>
