--- a/test.html
+++ b/test.html
@@ -34,4 +34,13 @@
 </html>
 
 
-<!
+<!DOCTYPE html>
+<html>
+  <body>
+    
+    <img src="img_girl.jpg" width="500"
+         height="600"> 
+    
+  </body>
+</html>
+
